--- a/manual/manual/Makefile
+++ b/manual/manual/Makefile
@@ -119,11 +119,7 @@ release: all
 	tar cf - infoman/ocaml.info* | gzip > $(RELEASE)refman.info.tar.gz
 
 web: html
-	dune exec html_processing/process_manual.exe
-	dune exec html_processing/process_api.exe makeindex
-	dune exec html_processing/process_api.exe compiler makeindex
-	dune exec html_processing/process_api.exe overwrite
-	dune exec html_processing/process_api.exe compiler overwrite
+	$(MAKE) -C html_processing all
 
 files: $(FILES)
 	$(MAKE) -C cmds      all
@@ -171,10 +167,9 @@ clean:
 	$(MAKE) -C library   clean
 	$(MAKE) -C refman    clean
 	$(MAKE) -C tutorials clean
+	$(MAKE) -C html_processing clean
 	-rm -f texstuff/*
 	cd htmlman; rm -rf libref compilerlibref index.html \
 	manual*.html *.haux *.hind *.svg
 	cd textman; rm -f manual.txt *.haux *.hind
 	cd infoman; rm -f ocaml.info ocaml.info-*  *.haux *.hind
-	rm -rf docs/
-	rm -rf api/
