Allow compilation without opam
Adds a duniverse target which clones and compiles Dune and clones the
dependencies. The process assumes that the compiler in the tree has been
installed and is in PATH.

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -40,3 +40,7 @@ clean:
 	$(MAKE) -C manual clean
 	$(MAKE) -C tools  clean
 	$(MAKE) -C tests  clean
+
+.PHONY: distclean
+distclean:
+	$(MAKE) -C manual distclean
