Test manual compilation in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,8 @@ matrix:
         packages:
         - texlive-latex-extra
         - texlive-fonts-recommended
+        - ruby-sass
+        - hevea
   - env: >-
       CI_KIND=build
       XARCH=x64
