move all shell stuff (cp, rm...) into the Makefile

--- a/manual/manual/html_processing/Makefile
+++ b/manual/manual/html_processing/Makefile
@@ -8,13 +8,77 @@ else
     DBG=quiet
 endif
 
-all:
+WEBDIR = ../webman
+WEBDIRMAN = $(WEBDIR)/manual
+WEBDIRAPI = $(WEBDIR)/api
+WEBDIRCOMP = $(WEBDIRAPI)/compilerlibref
+
+# The "all" target generates the Web Manual in the directories
+# ../webman/manual, ../webman/api, and ../webman/api/compilerlibref
+all: css js img
 	$(DUNE) exec --root=. src/process_manual.exe $(DBG)
 	$(DUNE) exec --root=. src/process_api.exe overwrite $(DBG)
 	$(DUNE) exec --root=. src/process_api.exe compiler overwrite $(DBG)
 
+$(WEBDIR):
+	mkdir -p $(WEBDIRMAN)
+	mkdir -p $(WEBDIRCOMP)
+
+$(WEBDIRMAN)/manual.css: $(WEBDIR)
+	sass scss/manual.scss > $(WEBDIRMAN)/manual.css
+
+$(WEBDIRAPI)/style.css: $(WEBDIR)
+	sass scss/style.scss > $(WEBDIRAPI)/style.css
+	cp $(WEBDIRAPI)/style.css $(WEBDIRCOMP)/style.css
+
+css: $(WEBDIRMAN)/manual.css $(WEBDIRAPI)/style.css
+
+# Just copy the JS files
+JS_FILES0 := scroll.js search.js
+JS_FILES := $(addprefix $(WEBDIRAPI)/, $(JS_FILES0)) $(addprefix $(WEBDIRCOMP)/, $(JS_FILES0)) $(WEBDIRMAN)/scroll.js
+# should be same as:
+#JS_FILES := $(WEBDIRAPI)/scroll.js $(WEBDIRAPI)/search.js $(WEBDIRCOMP)/scroll.js $(WEBDIRCOMP)/search.js $(WEBDIRMAN)/scroll.js
+
+# There must be a more clever way
+$(WEBDIRAPI)/%.js: js/%.js
+	cp $< $@
+
+$(WEBDIRMAN)/%.js: js/%.js
+	cp $< $@
+
+$(WEBDIRCOMP)/%.js: js/%.js
+	cp $< $@
+
+js: $(WEBDIR) $(JS_FILES)
+
+# Copy images
+IMG_FILES0 := colour-logo-gray.svg favicon.ico
+IMG_FILES1 := $(IMG_FILES0) search_icon.svg
+IMG_FILES := $(addprefix $(WEBDIRAPI)/, $(IMG_FILES1)) $(addprefix $(WEBDIRCOMP)/, $(IMG_FILES1)) $(addprefix $(WEBDIRMAN)/, $(IMG_FILES0)) 
+
+# There must be a more clever way
+$(WEBDIRMAN)/%.svg: images/%.svg
+	cp $< $@
+
+$(WEBDIRMAN)/%.ico: images/%.ico
+	cp $< $@
+
+$(WEBDIRAPI)/%.svg: images/%.svg
+	cp $< $@
+
+$(WEBDIRAPI)/%.ico: images/%.ico
+	cp $< $@
+
+$(WEBDIRCOMP)/%.svg: images/%.svg
+	cp $< $@
+
+$(WEBDIRCOMP)/%.ico: images/%.ico
+	cp $< $@
+
+img: $(WEBDIR) $(IMG_FILES)
+
 clean:
-	rm -rf ../webman src/.merlin _build
+	rm -rf $(WEBDIR) src/.merlin _build
 
 distclean::
 	rm -rf .sass-cache
@@ -65,3 +129,5 @@ uutf:
 
 distclean::
 	rm -rf uutf
+
+.PHONY: css js img duniverse
